--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,5 +1,5 @@
 - if @post.image?
-  - if @post.try(:image_width) > 1200
+  - if @post.image_width.to_i > 1200
     %figure.image= image_tag @post.image.url.gsub(/development/, 'production')
   - else 
     .small_image
