--- a/app/views/frontpage/_full_width_post.html.haml
+++ b/app/views/frontpage/_full_width_post.html.haml
@@ -32,17 +32,47 @@
           maxHeight: 600
           });
   - else
-    .columns
-      .column.is-8.is-offset-2.has-text-justified
-        - post.videos.each do |video|
-          .videocontent
-            %video{src: video.url, controls: "true", style: "width: 100%; height: 100%", height: "100%", width: "100%"}
+
+    - post.videos.each do |video|
+      - if video.progressive_video
+        %video{:controls => "", :poster => "#{video.url}/poster.jpg", :preload => "none"}
+          %source{:src => "#{video.url}/index.m3u8", :type => "application/vnd.apple.mpegurl"}
+          %source{:src => "#{video.url}/progressive.mp4", :type => "video/mp4; codecs=\"avc1.4d401f, mp4a.40.2\""}
+      - else
+        .videocontent
+          %video{src: video.url, controls: "true", style: "width: 100%; height: 100%", height: "100%", width: "100%"}
 - unless post.videos.empty? && post.audiopodcasts.empty?
   = content_for :jquery do
     :plain
-      if ((navigator.platform.indexOf("iPhone") == -1) && (navigator.platform.indexOf("iPad") == -1)) {
-        $('video,audio').mediaelementplayer({defaultVideoWidth: "100%", alwaysShowHours: true});        
-      }
+      $('video,audio').mediaelementplayer({
+                renderers: ['native_hls'], 
+                defaultVideoWidth: "100%", alwaysShowHours: true,
+                hls: {
+                  debug: true
+                },
+                success: function(media, node, instance) {
+                  // Use the conditional to detect if you are using `native_hls` renderer for that given media;
+                  // otherwise, you don't need it
+                  if (Hls !== undefined) {
+                    media.addEventListener(Hls.Events.MEDIA_ATTACHED, function () {
+                      // All the code when this event is reached...
+                      console.log('Media attached!');
+                    });
+
+                    // Manifest file was parsed, invoke loading method
+                    media.addEventListener(Hls.Events.MANIFEST_PARSED, function () {
+                      // All the code when this event is reached...
+                      console.log('Manifest parsed!');
+
+                    });
+
+                    media.addEventListener(Hls.Events.FRAG_PARSING_METADATA, function (event, data) {
+                      // All the code when this event is reached...
+                      console.log(data);
+                    });
+                  }
+                }});   
+
 /
 / - if post.photos.empty?
 /   .row
