--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -228,9 +228,20 @@ footer.footer {
 }
 
 
+.videocontent {
+  min-height: 449px !important;
+}
+
+@media screen and (min-width: 481px) and (max-width:812px) {
+  main {
+    .post {
+      padding: 0 1rem;
+    }
+  }
+}
 // mobile stuff
 @media screen and (max-width: 480px) {
-
+  
   .mejs-container {
     max-height: 220px;
   }
