--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -26,9 +26,10 @@
           - unless @post.videos.empty?
             - @post.videos.each do |video|              
               - if video.progressive_video
-                %video{:controls => "", :poster => "#{video.url}/poster.jpg", :preload => "none"}
-                  %source{:src => "#{video.url}/index.m3u8", :type => "application/vnd.apple.mpegurl"}
-                  %source{:src => "#{video.url}/progressive.mp4", :type => "video/mp4; codecs=\"avc1.4d401f, mp4a.40.2\""}
+                .videocontent
+                  %video{:controls => "", :poster => "#{video.url}/poster.jpg", :preload => "none"}
+                    %source{:src => "#{video.url}/index.m3u8", :type => "application/vnd.apple.mpegurl"}
+                    %source{:src => "#{video.url}/progressive.mp4", :type => "video/mp4; codecs=\"avc1.4d401f, mp4a.40.2\""}
               - else
                 .videocontent.column
                   %video{src: video.url, style: "width: 100%; height: 100%", width: "100%", height: "100%"}
@@ -38,6 +39,9 @@
               :plain
 
                 $('video,audio').mediaelementplayer({
+                  videoWidth: '100%',
+                  videoHeight: '100%',  
+                  enableAutosize: true,
                   renderers: ['native_hls'], 
                   defaultVideoWidth: "100%", alwaysShowHours: true,
                   hls: {
